Responsive styling fixes on mobile and tablet

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ a {
     text-decoration: underline;
     text-decoration-color: #e95e54;
     font-weight: 400;
+    color: black;
 }
 
 .text-link:visited {
@@ -284,7 +285,6 @@ section {
 }
 
 .project-description {
-    font-size: 25px;
     width: 100%;
     font-weight: 400;
     color: black;
@@ -426,6 +426,7 @@ footer p {
 
     h3 {
         font-size: 17px;
+        line-height: 22px;
     }
 
     p {
@@ -535,6 +536,10 @@ footer p {
         padding: 2px 7px;
     }
 
+    .other-projects {
+        width: 80%;
+    }
+
     /* Skills */
 
     .skills-section div {
@@ -600,6 +605,10 @@ footer p {
         font-size: 60px;
     }
 
+    p {
+        width: 80%;
+    }
+
     header h2 {
         font-size: 40px;
     }
@@ -612,6 +621,18 @@ footer p {
         width: 225px;
         height: 225px;
         right: 10%;
+    }
+
+    .summary-container {
+        width: 80%;
+    }
+
+    .other-projects {
+        width: 80%;
+    }
+
+    .skills-section div {
+        width: 80%;
     }
 
     /* More */
